# CardROI

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages-deploy.yml
crates/cardroi-web/: Cargo.toml  package-lock.json  package.json
crates/cardroi-web/assets/: tailwind.css  tailwind.generated.css  tokens.css
crates/cardroi-web/src/: local_prefs.rs  main.rs  routes.rs  storage.rs  web_bridge.rs
crates/cardroi-web/src/components/: form_field.rs  holding_picker.rs  mod.rs  nav.rs  photo.rs
crates/cardroi-web/src/screens/: buy_form.rs  comp_form.rs  dashboard.rs  format.rs  holding_detail.rs  mod.rs  performance.rs  portfolio.rs  reports.rs  risk.rs  sell_form.rs
proptest-regressions/analytics/: irr.txt  twr.txt
src/: error.rs  lib.rs  main.rs
src/analytics/: irr.rs  mod.rs  portfolio.rs  roi.rs  twr.rs  whatif.rs
src/commands/: buy.rs  card.rs  comp.rs  holding.rs  import.rs  irr.rs  mod.rs  report.rs  roi.rs  sell.rs  set.rs  transaction.rs  twr.rs  whatif.rs
src/db/: connection.rs  mod.rs  schema.rs
src/db/migrations/: 0001_initial.sql  0002_appraisals.sql  0003_transaction_total_check.sql  0004_loss_transactions.sql  0005_composite_indexes.sql  0006_holding_images.sql  0007_holding_image_inline_storage.sql
src/db/repository/: appraisals.rs  cards.rs  holding_images.rs  holdings.rs  import.rs  mod.rs  sets.rs  transactions.rs
src/models/: appraisal.rs  card.rs  holding.rs  holding_image.rs  mod.rs  money.rs  set.rs  transaction.rs
src/reports/: export.rs  mod.rs
tests/: cli_buy.rs  cli_card.rs  cli_comp.rs  cli_holding.rs  cli_irr.rs  cli_report.rs  cli_roi.rs  cli_sell.rs  cli_set.rs  cli_skeleton.rs  cli_transaction.rs  cli_twr.rs  cli_whatif.rs  holding_images.rs  import_checklist.rs  import_csv.rs  import_json.rs  repository.rs  schema.rs  workflow_end_to_end.rs
tests/fixtures/: checklist_sample.csv  import_sample.csv  import_sample.json  report_expected.csv  report_expected.json
