[package]
name = "cardroi-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["CardROI Contributors"]
description = "Browser-based (Dioxus/WASM) build of CardROI (Phase 3.5) - not published, not part of the CLI's MSRV/versioning promises"
license = "MIT"
publish = false

[[bin]]
name = "cardroi-web"
path = "src/main.rs"

[dependencies]
# The whole point of this crate: reuse the exact same db/analytics layer
# the CLI already uses, via a path dependency - never a parallel data
# path. Same reasoning as cardroi-desktop; see SPEC.md's Phase 3.5 section.
cardroi = { path = "../.." }

dioxus = { version = "0.7", features = ["web", "router"] }
thiserror = "2"
# Lucide icons via the same crate cardroi-desktop uses (Task 3.3) - same
# design system, not a second one.
dioxus-free-icons = { version = "0.10", features = ["lucide"] }
# Same versions as the root crate's Cargo.toml - these are its types
# (Money/RollupPnl fields, Transaction::transaction_date) passed straight
# through, never a separate copy. Same reasoning cardroi-desktop's
# Cargo.toml already documents for its own identical lines.
rust_decimal = "1"
chrono = "0.4"
# Encodes a holding's small in-row thumbnail JPEG as a data: URI for
# direct <img> display - already resolved transitively in this
# workspace's Cargo.lock at this version, so this promotes an existing
# dependency rather than growing the graph.
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# rusqlite and sqlite-wasm-rs are already in the dependency graph
# transitively (via cardroi and via rusqlite's own optional
# ffi-sqlite-wasm-rs feature), but a transitive dependency isn't
# importable by name unless this crate also declares it directly - same
# reason getrandom below needs a direct line even though nothing here
# calls it explicitly. No explicit `features` needed on either: rusqlite
# picks up its own default `ffi-sqlite-wasm-rs` backend on wasm32 (see
# root Cargo.toml's comment), and sqlite-wasm-rs's `WasmOsCallback` is a
# plain public item, not feature-gated.
rusqlite = "0.40"
sqlite-wasm-rs = "0.5"
# getrandom is only ever a transitive dependency here - it must still be
# declared directly to activate its wasm_js feature, since Cargo's feature
# unification only turns a feature on for a version actually present in
# this crate's own manifest. Confirmed against getrandom 0.3.4's own docs
# specifically (not the latest 0.4.x docs, which use a different
# mechanism) - the old RUSTFLAGS/cfg backend-selection approach is
# deprecated and now does nothing per 0.3.4's own documentation.
getrandom = { version = "0.3", features = ["wasm_js"] }
# RelaxedIdbVFS lives here, not in sqlite-wasm-rs itself (that crate only
# ships the raw FFI bindings + a default in-memory VFS) - confirmed by
# reading sqlite-wasm-rs's own README directly, not assumed. IndexedDB
# storage, main-thread-safe, no COOP/COEP headers needed - the right
# choice for v1 per docs/ideas/cardroi-web.md's "good enough, not
# bulletproof" requirement.
sqlite-wasm-vfs = "0.2"
# `local_prefs`'s browser-localStorage read/write (the collector's
# display name, and whether they've already been asked for it) - raw
# web-sys rather than a third-party Dioxus storage crate, since the need
# is two function calls, not a reactive synced signal. Already in
# Cargo.lock transitively via dioxus-web; needs a direct line to be
# importable by name, same reasoning as rusqlite/getrandom above.
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Lets `cargo test --target wasm32-unknown-unknown` actually execute
# (not just compile) this crate's tests - a plain `#[test]` binary can't
# run here at all: the whole cardroi-web binary links wasm-bindgen glue
# (via dioxus-web/web-sys) that only a JS host can satisfy, confirmed by
# trying a bare wasm32 runtime (wasmtime) first and watching it fail on
# `__wbindgen_describe`. `#[wasm_bindgen_test]` + the matching
# `wasm-bindgen-cli` runner is the real fix, not a plain runtime.
wasm-bindgen-test = "0.3"
# Test-only, to generate an in-process fake JPEG fixture for
# `components::photo`'s test - same version and feature scoping as the
# root crate's own (non-test) dependency, same `fake_jpeg` technique
# `tests/holding_images.rs` already uses natively. Feature-gated to just
# jpeg/png/webp like the root crate - the full default feature set pulls
# in a genuinely enormous dependency tree (AVIF's rav1e encoder, TIFF,
# EXR, GIF...) for what's only ever a test fixture generator here.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
